# tech-renaissance

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TIPS.md  configure.py  vcpkg.json  训练结果.txt
docs/: about_batch_size.md  about_view.md  adam.md  adamw.md  alpha_build.md  backend.md  backend_manager.md  beta_build.md  build_settings.md  build_settings_beta.md  clion_build_settings.md  cpu_backend.md  cpu_bce.md  cpu_broadcast.md  cpu_conv.md  cpu_create.md  cpu_dimension.md  cpu_loss.md  cpu_mm_fp32.md  cpu_pooling.md  cpu_scalar.md  cpu_slice.md  cpu_unary.md  cross_entropy_loss.md  cross_platform.md  cuda_backend.md  cuda_conv.md  device.md  dropout.md  dtype.md  flatten.md  gamma_build.md  guide.md  how_to_write_cmakelists.md  linear.md  logger.md  loop_issue.md  loss.md  mm_final_solutions.md  model.md  (+29 more)
include/: tech_renaissance.h
include/tech_renaissance/: tr_config.h.in
include/tech_renaissance/backend/: backend.h  backend_manager.h
include/tech_renaissance/backend/cpu/: cpu_backend.h
include/tech_renaissance/backend/cuda/: cuda_backend.h  cuda_common.h
include/tech_renaissance/data/: device.h  dtype.h  offset.h  shape.h  storage.h  strides.h  tensor.h
include/tech_renaissance/model/: dropout.h  flatten.h  linear.h  model.h  module.h  relu.h  tanh.h
include/tech_renaissance/optimizer/: state_manager.h
include/tech_renaissance/task/: dataset.h  mnist_dataset.h  task.h
include/tech_renaissance/trainer/: adam.h  adamw.h  constant_lr.h  cosine_annealing_lr.h  cosine_annealing_warm_restarts.h  cross_entropy_loss.h  exponential_lr.h  loss.h  multi_step_lr.h  optimizer.h  scheduler.h  sgd.h  state_manager.h  step_lr.h  trainer.h
include/tech_renaissance/utils/: logger.h  mnist_loader.h  profiler.h  python_session.h  pytorch_session.h  tr_exception.h
python/benchmark/: pytorch_adam.py  pytorch_sgd.py  test_trainer_adam.cpp  test_trainer_sgd.cpp
python/dataset/: test_labels.tsr  train_labels.tsr
python/module/: make_mnist.py  mlp.py  mnist_server.py  python_server.py  tech_renaissance.py  test_tsr_compatibility.py  test_tsr_extended.py  training.py  training_adam.py  training_adamw.py  training_sgd.py
python/module/models/: best_model.pth
python/tests/: example_onnx.py  example_onnx2.py  hello.py  mlp_mnist.py  python_task_simple.py  pytorch_adam.py  pytorch_adamw.py  pytorch_sgd.py  pytorch_task_mnist.py  simple_test.py  tensor_print_compare.py  test_pytorch_conv.py  test_pytorch_mm.py  test_tensor_io.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend.cpp  backend_manager.cpp
src/backend/cpu/: cpu_backend.cpp  cpu_basic_ops.cpp  cpu_bce.cpp  cpu_broadcast.cpp  cpu_cast.cpp  cpu_conv.cpp  cpu_create.cpp  cpu_dimension.cpp  cpu_dropout.cpp  cpu_loss.cpp  cpu_mm_fp32.cpp  cpu_pooling.cpp  cpu_scalar.cpp  cpu_slice.cpp  cpu_unary.cpp
src/backend/cuda/: cuda_backend.cpp  cuda_conv.cpp  cuda_mm_fp32.cpp
src/data/: CMakeLists.txt  device.cpp  dtype.cpp  offset.cpp  shape.cpp  storage.cpp  strides.cpp  tensor.cpp
src/model/: CMakeLists.txt  dropout.cpp  flatten.cpp  linear.cpp  model.cpp  module.cpp  relu.cpp  tanh.cpp
src/optimizer/: state_manager.cpp
src/task/: CMakeLists.txt  mnist_dataset.cpp  task.cpp
src/trainer/: CMakeLists.txt  adam.cpp  adamw.cpp  constant_lr.cpp  cosine_annealing_lr.cpp  cosine_annealing_warm_restarts.cpp  cross_entropy_loss.cpp  exponential_lr.cpp  loss.cpp  multi_step_lr.cpp  optimizer.cpp  scheduler.cpp  sgd.cpp  state_manager.cpp  step_lr.cpp  trainer.cpp
src/utils/: CMakeLists.txt  logger.cpp  mnist_loader.cpp  profiler.cpp  python_session.cpp  pytorch_session.cpp  tr_exception.cpp
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  test_model_optimizer_integration.cpp  test_task_adamw.cpp  test_task_sgd.cpp  test_trainer.cpp  test_trainer_adam.cpp  test_trainer_adamw.cpp  test_trainer_sgd.cpp  test_training.cpp  test_training_adam.cpp  test_training_adamw.cpp  test_training_mnist_mlp.cpp  test_training_simple.cpp
tests/unit_tests/: CMakeLists.txt  ideal_example.cpp  test_backend_refactor.cpp  test_copy.cpp  test_cpu_arithmetic.cpp  test_cpu_backend.cpp  test_cpu_bce.cpp  test_cpu_conv.cpp  test_cpu_conv_extra.cpp  test_cpu_conv_final.cpp  test_cpu_conv_new.cpp  test_cpu_create.cpp  test_cpu_dim_ops.cpp  test_cpu_dimension.cpp  test_cpu_div.cpp  test_cpu_expand.cpp  test_cpu_gemm.cpp  test_cpu_loss.cpp  test_cpu_mm.cpp  test_cpu_mm_final.cpp  test_cpu_pad.cpp  test_cpu_pooling.cpp  test_cpu_scalar.cpp  test_cpu_unary.cpp  test_cuda_backend.cpp  test_cuda_conv.cpp  test_cuda_conv_final.cpp  test_cuda_gemm.cpp  test_cuda_gemm_framework.cpp  test_cuda_mm_final.cpp  test_cuda_tconv_final.cpp  test_d4_optimizer.cpp  test_device.cpp  test_dtype.cpp  test_get_memory_size.cpp  test_is_close.cpp  test_item_access.cpp  test_logger.cpp  test_lr_schedulers.cpp  test_memory_allocation.cpp  (+22 more)
tests/unit_tests/cpu_core/: CMakeLists.txt  test_copy.cpp  test_cpu_broadcast.cpp  test_cpu_cast.cpp  test_cpu_create.cpp  test_cpu_slice.cpp  test_cpu_unary.cpp  test_logger.cpp  test_memory_occupation.cpp  test_model.cpp  test_performance.cpp  test_shape.cpp  test_tensor.cpp  test_tensor_backend.cpp  test_tsr_io_extended.cpp  test_view.cpp
tests/unit_tests/cuda_core/: CMakeLists.txt  test_cuda_gemm.cpp
tests/unit_tests/simple/: CMakeLists.txt  test_mnist_prepare.cpp  test_simd.cpp
