# =============================================================================
# 技术觉醒框架 - 数据模块构建配置
# 版本: 1.01.01
# 日期: 2025-10-24
# 作者: 技术觉醒团队
# =============================================================================

# 收集数据源文件
set(DATA_SOURCES
    device.cpp
    dtype.cpp
    offset.cpp
    shape.cpp
    strides.cpp
    storage.cpp
    tensor.cpp
)

# 创建数据库静态库
add_library(data STATIC ${DATA_SOURCES})

# 包含头文件目录
target_include_directories(data
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../../include
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>
        $<INSTALL_INTERFACE:include>
)

# 设置编译选项
target_compile_definitions(data PRIVATE
    TR_DATA_VERSION_MAJOR=1
    TR_DATA_VERSION_MINOR=01
    TR_DATA_VERSION_PATCH=01
)

# 设置C++标准
set_target_properties(data PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)

# 设置属性
set_target_properties(data PROPERTIES
    FOLDER "src"
    POSITION_INDEPENDENT_CODE ON
)